# boom

./: .env.default  Cargo.toml  README.md  apptainer.sh  config.yaml  telegram_update.sh
api/src/: main.rs
apptainer/def/: boom.def  build-sif.sh  kafka.def  mongo.def  prometheus.def  uptime-kuma.def  valkey.def
apptainer/scripts/: add_filters.sh  apptainer_start.sh  boom-healthcheck-listener.py  boom-listener-healthcheck.sh  kafka-healthcheck.sh  kuma-healthcheck.sh  mongodb-healthcheck.sh  process-healthcheck.sh  prometheus-healthcheck.sh
data/filters/: lsst.json
data/models/: cider_img_meta.onnx
src/: conf.rs  lib.rs
src/alert/: lsst.rs  ztf.rs
src/enrichment/: base.rs  decam.rs  lsst.rs  ztf.rs
src/enrichment/models/: acai.rs  base.rs  btsbot.rs  cider.rs  mod.rs
src/filter/: base.rs  lsst.rs  ztf.rs
src/kafka/: base.rs  lsst.rs
src/utils/: spatial.rs  testing.rs
tests/: test_conf.rs  test_filter.rs  test_lsst.rs  test_ztf.rs
tests/throughput/: apptainer_run.py  apptainer_run.sh
