[package]
name = "boom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.11.0"
aes-gcm = "0.10.3"
apache-avro = { version = "0.21.0", features = ["snappy", "derive"] }
apache-avro-derive = "0.21.0"
apache-avro-macros = { version = "1", path = "apache-avro-macros" }
async-trait = "0.1.89"
base64 = "0.22.1"
bcrypt = "0.17.1"
cdshealpix = "0.7.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.15.18"
constcat = "0.6.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
flare = "0.2.0"
futures = "0.3.31"
hifitime = "4.2.3"
indicatif = "0.18.0"
itertools = "0.14.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
lettre = "0.11"
moc = "0.19.1"
mongodb = "3.3.0"
ndarray = "0.17.2"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = "0.31.0"
rand = "0.10.1"
rdkafka = { version = "0.39.0", features = ["gssapi", "ssl", "tracing", "sasl", "zstd"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "signal"] }
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"]}
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
uuid = { version = "1.18", features = ["v4"] }
which = "7.0.0"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }

[features]
default = []
# The `gpu` feature only controls villar-pso. ONNX GPU is already enabled
# unconditionally on Linux via ort's `cuda` + `load-dynamic` features below,
# and is toggled purely at runtime via `config.gpu.enabled`.
# Backend selection for villar-pso is per-OS: cuda on Linux, metal on macOS.
gpu = ["dep:villar-pso"]

# Apple Silicon: ort with coreml + villar-pso with the Metal backend.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["coreml"] }
villar-pso = { git = "https://github.com/frenbox/villar-pso", features = ["metal"], optional = true }

# Linux: ort with cuda + load-dynamic, villar-pso with the CUDA backend.
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["cuda", "load-dynamic"] }
villar-pso = { git = "https://github.com/frenbox/villar-pso", features = ["cuda"], optional = true }

[workspace]
members = ["apache-avro-macros"]
